--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '45 3 * * *'
+    - cron: '00 21 * * SUN'
 
 jobs:
   ibm-cloud-restart:
